@@ -125,6 +125,9 @@ Jonathan Sternberg <jonathansternberg@gmail.com>
 	* Graph comparison (bug fix);
 	* Proper isolation of attribute lists (bug fix).
 
+Daniel Merritt <dmerritt@gmail.com>
+	* Fixed reading of XML-stored graphs with edge attributes.
+
 
 LICENSE
 
