@@ -124,7 +124,7 @@ def read(string):
                 wt = float(each_edge.getAttribute('wt')), label = each_edge.getAttribute('label'))
         for each_attr in each_edge.getElementsByTagName("attribute"):
             attr_tuple = (each_attr.getAttribute('attr'), each_attr.getAttribute('value'))
-            if (attr_tuple not in graph.edge_attributes((each_edge.getAttribute('from'), \
+            if (attr_tuple not in G.edge_attributes((each_edge.getAttribute('from'), \
                 each_edge.getAttribute('to')))):
                 G.add_edge_attribute((each_edge.getAttribute('from'), \
                     each_edge.getAttribute('to')), attr_tuple)
